--- a/playlist-style.css
+++ b/playlist-style.css
@@ -1,11 +1,56 @@
 /* playlist-style.css */
-.playlist {
-    background-color: #f0f0f0;
+.music-player {
+    position: relative;
+    width: 100%;
+    background: #222;
+    color: #fff;
     padding: 20px;
-    border: 1px solid #ddd;
+    box-sizing: border-box;
 }
 
-.playlist li {
-    list-style-type: none;
+.music-player .player-controls {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.music-player .player-controls button {
+    background: #444;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.music-player .player-controls button:hover {
+    background: #666;
+}
+
+.music-player .player-controls input[type=range] {
+    width: 100px;
+    margin: 0 10px;
+}
+
+.playlist {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.playlist .playlist_item {
+    padding: 10px;
     margin: 5px 0;
+    background: #333;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.playlist .playlist_item:hover {
+    background: #444;
+}
+
+.playlist .playlist_item .song-title {
+    color: #fff;
 }
