--- a/playlist-style.css
+++ b/playlist-style.css
@@ -26,6 +26,10 @@
     border-radius: 5px;
     transition: background-color 0.3s;
 }
+button.shuffle.active i {
+    color: green; /* تغییر رنگ یا هر استایل دیگری */
+}
+
 
 .music-player .player-controls button:hover {
     background: #87CEEB; /* رنگ ثانویه */
